--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,31 @@
 {
-    "name": "Hide corona",
+    "name": "Hide Damn Corona",
     "version": "1.0",
-    "description": "Get the damn corona out of my way!",
-    "permissions": ["activeTab", "declarativeContent", "storage"],
+    "description": "Get rid of all annoying corona references!",
+    "permissions": ["storage"],
     "background": {
         "scripts": ["background.js"],
         "persistent": false
     },
+    "content_scripts": [{
+        "matches": ["https://*/*"],
+        "js": ["contentScript.js"]
+    }],
     "options_page": "options.html",
-    "page_action": {
+    "browser_action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "images/get_started16.png",
-            "32": "images/get_started32.png",
-            "48": "images/get_started48.png",
-            "128": "images/get_started128.png"
+            "16": "images/icon-16.png",
+            "32": "images/icon-32.png",
+            "48": "images/icon-48.png",
+            "128": "images/icon-128.png"
         }
     },
     "icons": {
-        "16": "images/get_started16.png",
-        "32": "images/get_started32.png",
-        "48": "images/get_started48.png",
-        "128": "images/get_started128.png"
+        "16": "images/icon-16.png",
+        "32": "images/icon-32.png",
+        "48": "images/icon-48.png",
+        "128": "images/icon-128.png"
     },
     "manifest_version": 2
 }
